c2rust-transpile/tests/snapshots/snapshots__transpile@bool.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/bool.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
pub const true_0: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
pub const false_0: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
pub const MACRO_INT0: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
pub const MACRO_IDENT0: ::core::ffi::c_int = false_0;
pub const MACRO_INT1: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
pub const MACRO_IDENT1: ::core::ffi::c_int = true_0;
#[no_mangle]
pub unsafe extern "C" fn test_bool() {
    unsafe {
        let mut int0: bool = false;
        let mut ident0: bool = false_0 != 0;
        let mut macro_int0: bool = MACRO_INT0 != 0;
        let mut macro_ident0: bool = MACRO_IDENT0 != 0;
        let mut int1: bool = true;
        let mut ident1: bool = true_0 != 0;
        let mut macro_int1: bool = MACRO_INT1 != 0;
        let mut macro_ident1: bool = MACRO_IDENT1 != 0;
        if false {
        } else {
        };
        if false_0 != 0 {
        } else {
        };
        if MACRO_INT0 != 0 {
        } else {
        };
        if MACRO_IDENT0 != 0 {
        } else {
        };
        if true {
        } else {
        };
        if true_0 != 0 {
        } else {
        };
        if MACRO_INT1 != 0 {
        } else {
        };
        if MACRO_IDENT1 != 0 {
        } else {
        };
        int0 = int0 as ::core::ffi::c_int | int1 as ::core::ffi::c_int != 0;
    }
}
