c2rust-transpile/tests/snapshots/snapshots__transpile@bool.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/bool.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
pub const r#true: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
pub const r#false: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
pub const MACRO_INT0: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
pub const MACRO_IDENT0: ::core::ffi::c_int = r#false;
pub const MACRO_INT1: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
pub const MACRO_IDENT1: ::core::ffi::c_int = r#true;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn test_bool() {
    let mut int0: bool = false;
    let mut ident0: bool = r#false != 0;
    let mut macro_int0: bool = MACRO_INT0 != 0;
    let mut macro_ident0: bool = MACRO_IDENT0 != 0;
    let mut int1: bool = true;
    let mut ident1: bool = r#true != 0;
    let mut macro_int1: bool = MACRO_INT1 != 0;
    let mut macro_ident1: bool = MACRO_IDENT1 != 0;
    if false {
    } else {
    };
    if r#false != 0 {
    } else {
    };
    if MACRO_INT0 != 0 {
    } else {
    };
    if MACRO_IDENT0 != 0 {
    } else {
    };
    if true {
    } else {
    };
    if r#true != 0 {
    } else {
    };
    if MACRO_INT1 != 0 {
    } else {
    };
    if MACRO_IDENT1 != 0 {
    } else {
    };
    int0 = int0 as ::core::ffi::c_int | int1 as ::core::ffi::c_int != 0;
    int1 = (int1 as ::core::ffi::c_uint).wrapping_add(1 as ::core::ffi::c_uint) != 0;
    int1 = int1 as u8 as ::core::ffi::c_double * 2.0f64 != 0.;
    let mut d: ::core::ffi::c_double = int1 as u8 as ::core::ffi::c_double;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn test_bool_operator() {
    let mut comp_int: ::core::ffi::c_int =
        ((1 as ::core::ffi::c_int) < 0 as ::core::ffi::c_int) as ::core::ffi::c_int;
    let mut comp_long: ::core::ffi::c_long =
        ((1 as ::core::ffi::c_int) < 0 as ::core::ffi::c_int) as ::core::ffi::c_long;
    let mut logic_int: ::core::ffi::c_int = (false || false) as ::core::ffi::c_int;
    let mut logic_long: ::core::ffi::c_long = (false || false) as ::core::ffi::c_long;
    let mut ptr: *mut ::core::ffi::c_void = ::core::ptr::null_mut::<::core::ffi::c_void>();
    let mut null_ptr_int: ::core::ffi::c_int = ptr.is_null() as ::core::ffi::c_int;
    let mut null_ptr_long: ::core::ffi::c_long = ptr.is_null() as ::core::ffi::c_long;
    let mut not_int: ::core::ffi::c_int = true as ::core::ffi::c_int;
    let mut not_long: ::core::ffi::c_long = true as ::core::ffi::c_long;
}
