c2rust-transpile/tests/snapshots/snapshots__transpile@call_only_once.c.2021.macos.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/call_only_once.2021.macos.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
extern "C" {
    fn __assert_rtn(
        _: *const ::core::ffi::c_char,
        _: *const ::core::ffi::c_char,
        _: ::core::ffi::c_int,
        _: *const ::core::ffi::c_char,
    ) -> !;
}
static mut called: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
unsafe extern "C" fn called_only_once() -> ::core::ffi::c_int {
    called += 1;
    return 1 as ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn assert_call_only_once() -> ::core::ffi::c_int {
    if called_only_once() == 0 {
        __assert_rtn(
            b"assert_call_only_once\0".as_ptr() as *const ::core::ffi::c_char,
            b"call_only_once.c\0".as_ptr() as *const ::core::ffi::c_char,
            12 as ::core::ffi::c_int,
            b"called_only_once()\0".as_ptr() as *const ::core::ffi::c_char,
        );
    } else {
    };
    return called;
}
